--- a/owncloudApp/src/main/res/values-pt-rBR/strings.xml
+++ b/owncloudApp/src/main/res/values-pt-rBR/strings.xml
@@ -37,8 +37,8 @@
   <string name="prefs_accounts">Contas</string>
   <string name="prefs_manage_accounts">Gerenciar contas</string>
   <string name="prefs_passcode">Bloqueio de senha</string>
-  <string name="prefs_fingerprint">Bloqueio Impressão Digital</string>
-  <string name="prefs_fingerprint_summary">Ativar senha ou bloqueio padrão para habilitar esta opção</string>
+  <string name="prefs_biometric">Bloqueio Impressão Digital</string>
+  <string name="prefs_biometric_summary">Ativar senha ou bloqueio padrão para habilitar esta opção</string>
   <string name="prefs_touches_with_other_visible_windows">Toques com outras janelas visíveis</string>
   <string name="prefs_touches_with_other_visible_windows_summary">Permitir toques quando a visualização é obscurecida por outra janela visível. Ativá-lo para usar aplicativos de filtragem de luz.</string>
   <string name="confirmation_touches_with_other_windows_title">Tem certeza de que deseja ativar esse recurso?</string>
@@ -225,13 +225,8 @@
   <string name="pass_code_wrong">Código de acesso incorreto</string>
   <string name="pass_code_removed">Código de acesso removido</string>
   <string name="pass_code_stored">Código de acesso armazenado</string>
-  <string name="fingerprint_confirm">Confirme sua impressão digital para continuar</string>
-  <string name="fingerprint_hint">Sensor de toque</string>
-  <string name="fingerprint_not_recognized">Impressão digital não reconhecida, tente novamente</string>
-  <string name="fingerprint_success">Impressão digital reconhecida</string>
-  <string name="fingerprint_not_hardware_detected">Este dispositivo não suporta a autenticação com impressão digital</string>
-  <string name="fingerprint_not_enrolled_fingerprints">Registre pelo menos uma impressão digital para usar esse recurso</string>
-  <string name="fingerprint_not_granted_permissions">Permissões de impressão digital não concedidas</string>
+  <string name="biometric_not_hardware_detected">Este dispositivo não suporta a autenticação com impressão digital</string>
+  <string name="biometric_not_enrolled">Registre pelo menos uma impressão digital para usar esse recurso</string>
   <string name="media_notif_ticker">%1$s reprodutor de música</string>
   <string name="media_state_playing">%1$s (reproduzindo)</string>
   <string name="media_state_loading">%1$s (carregando)</string>
