--- a/owncloudApp/src/main/res/values/strings.xml
+++ b/owncloudApp/src/main/res/values/strings.xml
@@ -37,8 +37,8 @@
     <string name="prefs_accounts">Accounts</string>
     <string name="prefs_manage_accounts">Manage accounts</string>
     <string name="prefs_passcode">Passcode lock</string>
-    <string name="prefs_fingerprint">Fingerprint lock</string>
-    <string name="prefs_fingerprint_summary">Enable passcode or pattern lock to enable this option</string>
+    <string name="prefs_biometric">Biometric lock</string>
+    <string name="prefs_biometric_summary">Enable passcode or pattern lock to enable this option</string>
     <string name="prefs_touches_with_other_visible_windows">Touches with other visible windows</string>
     <string name="prefs_touches_with_other_visible_windows_summary">Allow touches when the view is obscured by another visible window. Enable it to use light filtering apps.</string>
     <string name="confirmation_touches_with_other_windows_title">Are you sure you want to enable this feature?</string>
@@ -229,13 +229,10 @@
     <string name="pass_code_removed">Passcode removed</string>
     <string name="pass_code_stored">Passcode stored</string>
 
-    <string name="fingerprint_confirm">Confirm your fingerprint to continue</string>
-    <string name="fingerprint_hint">Touch sensor</string>
-    <string name="fingerprint_not_recognized">Fingerprint not recognized, try again</string>
-    <string name="fingerprint_success">Fingerprint recognized</string>
-    <string name="fingerprint_not_hardware_detected">This device doesn\'t support fingerprint authentication</string>
-    <string name="fingerprint_not_enrolled_fingerprints">Register at least one fingerprint to use this feature</string>
-    <string name="fingerprint_not_granted_permissions">Fingerprint permissions not granted</string>
+    <string name="biometric_not_hardware_detected">This device doesn\'t support biometric authentication</string>
+    <string name="biometric_not_enrolled">Register at least one biometric to use this feature</string>
+    <string name="biometric_prompt_title">Biometric log in</string>
+    <string name="biometric_prompt_subtitle">Log in using your biometric credential</string>
 
     <string name="media_notif_ticker">%1$s music player</string>
     <string name="media_state_playing">%1$s (playing)</string>
