--- a/owncloudApp/src/main/res/values-ca/strings.xml
+++ b/owncloudApp/src/main/res/values-ca/strings.xml
@@ -37,8 +37,8 @@
   <string name="prefs_accounts">Comptes</string>
   <string name="prefs_manage_accounts">Gestió de comptes</string>
   <string name="prefs_passcode">Contrasenya</string>
-  <string name="prefs_fingerprint">Bloqueig per petjada dactilar</string>
-  <string name="prefs_fingerprint_summary">Activa la contrasenya o el patró de desbloqueig per activar aquesta opció</string>
+  <string name="prefs_biometric">Bloqueig per petjada dactilar</string>
+  <string name="prefs_biometric_summary">Activa la contrasenya o el patró de desbloqueig per activar aquesta opció</string>
   <string name="confirmation_touches_with_other_windows_title">Segur que voleu habilitar aquesta funció?</string>
   <string name="confirmation_touches_with_other_windows_message">Utilitzeu aquesta característica sota la vostra responsabilitat, aplicacions malicioses podrien executar accions sense que us adonesiu fent servir altres vistes.</string>
   <string name="prefs_camera_picture_upload">Imatges pujades</string>
@@ -222,13 +222,8 @@
   <string name="pass_code_wrong">Codi d\'accés incorrecte</string>
   <string name="pass_code_removed">Codi d\'accés eliminat</string>
   <string name="pass_code_stored">Codi d\'accés guardat</string>
-  <string name="fingerprint_confirm">Confirmar petjada dactilar per continuar</string>
-  <string name="fingerprint_hint">Sensor dactilar</string>
-  <string name="fingerprint_not_recognized">Petjada dactilar no reconeguda, intenta de nou</string>
-  <string name="fingerprint_success">Petjada dactilar reconeguda</string>
-  <string name="fingerprint_not_hardware_detected">Aquest dispositiu no disposa de lector de petjades dactilars</string>
-  <string name="fingerprint_not_enrolled_fingerprints">Guarda com a mínim una petjada dactilar per utilitzar aquesta funció</string>
-  <string name="fingerprint_not_granted_permissions">Autentificació dactilar denegada</string>
+  <string name="biometric_not_hardware_detected">Aquest dispositiu no disposa de lector de petjades dactilars</string>
+  <string name="biometric_not_enrolled">Guarda com a mínim una petjada dactilar per utilitzar aquesta funció</string>
   <string name="media_notif_ticker">reproductor de música %1$s</string>
   <string name="media_state_playing">%1$s (sonant)</string>
   <string name="media_state_loading">%1$s (carregant)</string>
