--- a/owncloudApp/src/main/res/values-cs-rCZ/strings.xml
+++ b/owncloudApp/src/main/res/values-cs-rCZ/strings.xml
@@ -37,7 +37,7 @@
   <string name="prefs_accounts">Účty</string>
   <string name="prefs_manage_accounts">Spravovat účty</string>
   <string name="prefs_passcode">Zámek bezpečnostního kódu</string>
-  <string name="prefs_fingerprint">Zámek otisku prstů</string>
+  <string name="prefs_biometric">Zámek otisku prstů</string>
   <string name="confirmation_touches_with_other_windows_title">Jste si jisti, že chcete povolit tuto funkci?</string>
   <string name="prefs_camera_picture_upload">Nahrání obrázku</string>
   <string name="prefs_camera_picture_upload_summary">Automaticky nahrát obrázky snímané kamerou</string>
@@ -202,13 +202,8 @@ Automaticky nahrát video snímané kamerou
   <string name="pass_code_wrong">Nesprávný bezpečnostní kód</string>
   <string name="pass_code_removed">Bezpečnostní kód odstraněn</string>
   <string name="pass_code_stored">Bezpečnostní kód uložen</string>
-  <string name="fingerprint_confirm">Ověřte otisk prstu a pokračujte</string>
-  <string name="fingerprint_hint">Dotekový senzor</string>
-  <string name="fingerprint_not_recognized">Otisk prstu nerozeznán, zkuste prosím znovu</string>
-  <string name="fingerprint_success">Otisk prstu rozeznán</string>
-  <string name="fingerprint_not_hardware_detected">Toto zařízení nepodporuje autentizaci pomocí otisku prstů</string>
-  <string name="fingerprint_not_enrolled_fingerprints">Chcete-li tuto funkci použít, zaregistrujte si alespoň jeden otisk prstu</string>
-  <string name="fingerprint_not_granted_permissions">Nemáte oprávnění k otistu prstu</string>
+  <string name="biometric_not_hardware_detected">Toto zařízení nepodporuje autentizaci pomocí otisku prstů</string>
+  <string name="biometric_not_enrolled">Chcete-li tuto funkci použít, zaregistrujte si alespoň jeden otisk prstu</string>
   <string name="media_notif_ticker">Hudební přehrávač %1$s</string>
   <string name="media_state_playing">%1$s (přehrává)</string>
   <string name="media_state_loading">%1$s (načítá)</string>
