--- a/owncloudApp/src/main/res/values-it/strings.xml
+++ b/owncloudApp/src/main/res/values-it/strings.xml
@@ -37,8 +37,8 @@
   <string name="prefs_accounts">Account</string>
   <string name="prefs_manage_accounts">Gestisci account</string>
   <string name="prefs_passcode">Blocco con codice di sicurezza</string>
-  <string name="prefs_fingerprint">Blocco con impronta digitale</string>
-  <string name="prefs_fingerprint_summary">Abilita il blocco con pasword o la sequenza di blocco per attivare questa opzione.</string>
+  <string name="prefs_biometric">Blocco con impronta digitale</string>
+  <string name="prefs_biometric_summary">Abilita il blocco con pasword o la sequenza di blocco per attivare questa opzione.</string>
   <string name="prefs_touches_with_other_visible_windows">Tocca con altre finestre visibili</string>
   <string name="prefs_touches_with_other_visible_windows_summary">Consenti tocchi quando la vista è oscurata da un\'altra finestra visibile. Abilitalo per utilizzare app di filtraggio della luce.</string>
   <string name="confirmation_touches_with_other_windows_title">Sei sicuro di voler abilitare queste funzione?</string>
@@ -218,13 +218,8 @@
   <string name="pass_code_wrong">Codice segreto non corretto</string>
   <string name="pass_code_removed">Codice segreto rimosso</string>
   <string name="pass_code_stored">Codice segreto memorizzato</string>
-  <string name="fingerprint_confirm">Conferma la tua impronta digitale per continuare</string>
-  <string name="fingerprint_hint">Tocca il sensore</string>
-  <string name="fingerprint_not_recognized">Impronta non riconosciuta, prova di nuovo</string>
-  <string name="fingerprint_success">Impronta riconosciuta</string>
-  <string name="fingerprint_not_hardware_detected">Questo dispositivo non supporta l\'autenticazione a mezzo impronta digitale</string>
-  <string name="fingerprint_not_enrolled_fingerprints">Registra almeno una impronta per usare questa funzionalità</string>
-  <string name="fingerprint_not_granted_permissions">Permesso per impronta digitale non garantito</string>
+  <string name="biometric_not_hardware_detected">Questo dispositivo non supporta l\'autenticazione a mezzo impronta digitale</string>
+  <string name="biometric_not_enrolled">Registra almeno una impronta per usare questa funzionalità</string>
   <string name="media_notif_ticker">Lettore musicale %1$s</string>
   <string name="media_state_playing">%1$s (in riproduzione)</string>
   <string name="media_state_loading">%1$s (in caricamento)</string>
