--- a/owncloudApp/src/main/res/values-ko/strings.xml
+++ b/owncloudApp/src/main/res/values-ko/strings.xml
@@ -30,8 +30,8 @@
   <string name="prefs_accounts">계정</string>
   <string name="prefs_manage_accounts">계정 관리</string>
   <string name="prefs_passcode">암호 잠금</string>
-  <string name="prefs_fingerprint">지문 잠금</string>
-  <string name="prefs_fingerprint_summary">이 옵션을 활성화하려면 비밀번호나 패턴 잠금을 활성화하십시오</string>
+  <string name="prefs_biometric">지문 잠금</string>
+  <string name="prefs_biometric_summary">이 옵션을 활성화하려면 비밀번호나 패턴 잠금을 활성화하십시오</string>
   <string name="prefs_camera_picture_upload">사진 업로드</string>
   <string name="prefs_camera_picture_upload_summary">카메라로 찍은 사진 자동으로 업로드</string>
   <string name="prefs_camera_video_upload">동영상 업로드</string>
@@ -191,11 +191,7 @@
   <string name="pass_code_wrong">암호가 잘못됨</string>
   <string name="pass_code_removed">암호 삭제됨</string>
   <string name="pass_code_stored">암호 저장됨</string>
-  <string name="fingerprint_hint">터치센서</string>
-  <string name="fingerprint_not_recognized">지문이 인식되지 않았습니다. 다시시도해주세요</string>
-  <string name="fingerprint_success">지문확인됨</string>
-  <string name="fingerprint_not_hardware_detected">이 기기는 지문 인식이 지원이 되지 않습니다</string>
-  <string name="fingerprint_not_granted_permissions">지문인식 권한이 부여되지 않았습니다</string>
+  <string name="biometric_not_hardware_detected">이 기기는 지문 인식이 지원이 되지 않습니다</string>
   <string name="media_notif_ticker">%1$s 음악 재생기</string>
   <string name="media_state_playing">%1$s (재생 중)</string>
   <string name="media_state_loading">%1$s (불러오는 중)</string>
