--- a/owncloudApp/src/main/res/values-nl/strings.xml
+++ b/owncloudApp/src/main/res/values-nl/strings.xml
@@ -37,8 +37,8 @@
   <string name="prefs_accounts">Accounts</string>
   <string name="prefs_manage_accounts">Accounts beheren</string>
   <string name="prefs_passcode">Pincode slot</string>
-  <string name="prefs_fingerprint">Vingerafdrukvergrendeling</string>
-  <string name="prefs_fingerprint_summary">Zet de toegangscode of de patroonvergrendeling aan om deze optie te activeren </string>
+  <string name="prefs_biometric">Vingerafdrukvergrendeling</string>
+  <string name="prefs_biometric_summary">Zet de toegangscode of de patroonvergrendeling aan om deze optie te activeren </string>
   <string name="prefs_touches_with_other_visible_windows_summary">Sta acties toe als het scherm wordt beinvloed door een andere app. Zet dit aan als je licht-filter apps gebruikt.</string>
   <string name="confirmation_touches_with_other_windows_title">Weet je zeker dat je deze functionaliteit wilt aanzetten?</string>
   <string name="prefs_camera_picture_upload">Afbeeldingen uploaden</string>
@@ -220,13 +220,8 @@ Hieronder staan de lokale bestanden en de externe bestanden in %5$s waar ze naar
   <string name="pass_code_wrong">Onjuiste pincode</string>
   <string name="pass_code_removed">Pincode verwijderd</string>
   <string name="pass_code_stored">Pincode opgeslagen</string>
-  <string name="fingerprint_confirm">Bevestig uw vingerafdruk om door te gaan</string>
-  <string name="fingerprint_hint">Touch sensor</string>
-  <string name="fingerprint_not_recognized">Vingerafdruk niet herkend, probeer opnieuw</string>
-  <string name="fingerprint_success">Vingerafdruk herkend</string>
-  <string name="fingerprint_not_hardware_detected">Dit apparaat ondersteunt geen vingerafdruk-authenticatie</string>
-  <string name="fingerprint_not_enrolled_fingerprints">Registreer ten minste één vingerafdruk om deze functie te gebruiken</string>
-  <string name="fingerprint_not_granted_permissions">Vingerafdruk-autorisatie is niet toegestaan</string>
+  <string name="biometric_not_hardware_detected">Dit apparaat ondersteunt geen vingerafdruk-authenticatie</string>
+  <string name="biometric_not_enrolled">Registreer ten minste één vingerafdruk om deze functie te gebruiken</string>
   <string name="media_notif_ticker">%1$s muziekspeler</string>
   <string name="media_state_playing">%1$s (speelt)</string>
   <string name="media_state_loading">%1$s (laden)</string>
