--- a/owncloudApp/src/main/res/values-th-rTH/strings.xml
+++ b/owncloudApp/src/main/res/values-th-rTH/strings.xml
@@ -37,8 +37,8 @@
   <string name="prefs_accounts">บัญชี</string>
   <string name="prefs_manage_accounts">บริหารจัดการบัญชี</string>
   <string name="prefs_passcode">ล็อครหัสยืนยัน</string>
-  <string name="prefs_fingerprint">ล็อคด้วยลายนิ้วมือ</string>
-  <string name="prefs_fingerprint_summary">เปิดใช้งานรหัสผ่านหรือรูปแบบล็อคเพื่อเปิดใช้งานตัวเลือกนี้</string>
+  <string name="prefs_biometric">ล็อคด้วยลายนิ้วมือ</string>
+  <string name="prefs_biometric_summary">เปิดใช้งานรหัสผ่านหรือรูปแบบล็อคเพื่อเปิดใช้งานตัวเลือกนี้</string>
   <string name="prefs_touches_with_other_visible_windows">แตะกับหน้าต่างอื่นที่มองเห็น</string>
   <string name="prefs_touches_with_other_visible_windows_summary">อนุญาตให้แตะเมื่อมุมมองถูกบดบังโดยหน้าต่างอื่นที่มองเห็นได้ เปิดใช้งานเพื่อใช้แอปกรองแสง</string>
   <string name="confirmation_touches_with_other_windows_title">คุณแน่ใจหรือว่าต้องการเปิดใช้งานคุณลักษณะนี้?</string>
@@ -225,13 +225,8 @@
   <string name="pass_code_wrong">รหัสยืนยันไม่ถูกต้อง</string>
   <string name="pass_code_removed">ลบรหัสยืนยัน</string>
   <string name="pass_code_stored">รหัสยืนยันที่เก็บไว้</string>
-  <string name="fingerprint_confirm">ยืนยันลายนิ้วมือของคุณเพื่อดำเนินการต่อ</string>
-  <string name="fingerprint_hint">เซ็นเซอร์ระบบสัมผัส</string>
-  <string name="fingerprint_not_recognized">ไม่รู้จักลายนิ้วมือนี้ โปรดลองอีกครั้ง</string>
-  <string name="fingerprint_success">ตรวจสอบลายนิ้วมือแล้ว</string>
-  <string name="fingerprint_not_hardware_detected">อุปกรณ์นี้ไม่สนับสนุนการตรวจสอบด้วยลายนิ้วมือ</string>
-  <string name="fingerprint_not_enrolled_fingerprints">เปิดใช้งานอย่างน้อยหนึ่งลายนิ้วมือเพื่อใช้คุณลักษณะนี้</string>
-  <string name="fingerprint_not_granted_permissions">ลายนิ้วมือนี้ยังไม่ได้รับอนุญาต</string>
+  <string name="biometric_not_hardware_detected">อุปกรณ์นี้ไม่สนับสนุนการตรวจสอบด้วยลายนิ้วมือ</string>
+  <string name="biometric_not_enrolled">เปิดใช้งานอย่างน้อยหนึ่งลายนิ้วมือเพื่อใช้คุณลักษณะนี้</string>
   <string name="media_notif_ticker">เล่นเพลง %1$s</string>
   <string name="media_state_playing">%1$s (กำลังเล่น)</string>
   <string name="media_state_loading">%1$s (กำลังโหลด)</string>
