Scan document with OpenCV

--- a/owncloudApp/src/main/res/values/strings.xml
+++ b/owncloudApp/src/main/res/values/strings.xml
@@ -605,6 +605,7 @@
     <string name="welcome_feature_7_text">Connect to your ownCloud servers in a more secure way with OpenID Connect</string>
     <string name="no_borwser_installed_alert">No browser installed. Please install a Browser in order to allow a secure login.</string>
     <string name="common_not_found">it was not found</string>
+    <string name="scan_document">Scan document</string>
 
     <string name="supports_oauth2_error">It was not possible to know if OAuth2 is supported</string>
     <string name="get_base_url_error">It was not possible to know the server base url</string>
